--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -121,4 +121,5 @@
     <string name="search">search</string>
     <string name="add_cost">add cost</string>
     <string name="chooseoneoftwooptions">Choose One Of The Two Options</string>
+    <string name="developedby">developed By</string>
 </resources>
